# tensorfeed

./: .gitignore  AGENT-PAYMENTS-SPEC.md  CLAUDE.md  LICENSE  README.md  SUBMISSIONS.md  glama.json  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
data/: articles.json  benchmarks.json  pricing.json  sources.json  timeline.json
docs/: ARCHITECTURE.md
functions/: _bot-detection.ts  _middleware.ts  tsconfig.json
mcp-server/: CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  server.json
mcp-server/src/: index.ts
public/: feed.json  feed.xml  llms-full.txt  llms.txt  openapi.json  robots.txt
public/.well-known/: agent-fair-trade-schema.json  agent-fair-trade.json  tensorfeed-receipt-key.json  x402  x402.json
public/api/agents/: news.json  status.json
public/feed/: research.xml  tools.xml
scripts/: fetch-feeds.ts
sdk/javascript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/javascript/src/: index.ts
sdk/langchain-python/: LICENSE  MANIFEST.in  README.md  pyproject.toml
sdk/langchain-python/langchain-docs-pr/: README.md
sdk/langchain-python/langchain-docs-pr/docs/docs/integrations/document_loaders/: tensorfeed.ipynb
sdk/langchain-python/langchain-docs-pr/docs/docs/integrations/providers/: tensorfeed.mdx
sdk/langchain-python/langchain-docs-pr/docs/docs/integrations/tools/: tensorfeed.ipynb
sdk/langchain-python/langchain_tensorfeed/: __init__.py  _client.py  loaders.py  tools.py
sdk/langchain-python/tests/: conftest.py  test_loaders.py  test_tools.py
sdk/python/: .gitignore  PUBLISHING.md  README.md  pyproject.toml
sdk/python/tensorfeed/: __init__.py  client.py
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/app/about/: page.tsx
src/app/account/: AccountClient.tsx  page.tsx
src/app/agent-fair-trade/: page.tsx
src/app/agent-traffic/: AgentTrafficClient.tsx  page.tsx
src/app/agents/: layout.tsx  page.tsx
src/app/agi-asi/: layout.tsx
src/app/ai-api-pricing-guide/: page.tsx
src/app/alerts/: page.tsx
src/app/api-reference/: page.tsx
src/app/api-reference/[endpoint]/: page.tsx
src/app/authors/: page.tsx
src/app/authors/kira-nolan/: page.tsx
src/app/authors/marcus-chen/: page.tsx
src/app/authors/ripper/: page.tsx
src/app/benchmarks/: layout.tsx  page.tsx
src/app/benchmarks/[name]/: page.tsx
src/app/best-ai-chatbots/: page.tsx
src/app/best-ai-tools/: page.tsx
src/app/best-open-source-llms/: page.tsx
src/app/changelog/: page.tsx
src/app/claude-md-examples/: layout.tsx
src/app/claude-md-guide/: layout.tsx  page.tsx
src/app/compare/: layout.tsx  page.tsx
src/app/developers/: page.tsx
src/app/developers/agent-payments/: page.tsx
src/app/editorial-policy/: page.tsx
src/app/for-ai-agents/: page.tsx
src/app/glossary/: page.tsx
src/app/glossary/agent-payments/: page.tsx
src/app/glossary/mcp/: page.tsx
src/app/glossary/x402/: page.tsx
src/app/gpu-pricing/: page.tsx
src/app/incidents/: layout.tsx  page.tsx
src/app/is-chatgpt-down/: page.tsx
src/app/is-claude-down/: page.tsx
src/app/is-cohere-down/: page.tsx
src/app/is-copilot-down/: page.tsx
src/app/is-gemini-down/: page.tsx
src/app/is-huggingface-down/: page.tsx
src/app/is-midjourney-down/: page.tsx
src/app/is-mistral-down/: page.tsx
src/app/is-perplexity-down/: page.tsx
src/app/is-replicate-down/: page.tsx
src/app/live/: layout.tsx  page.tsx
src/app/model-wars/: layout.tsx
src/app/models/: page.tsx
src/app/originals/: page.tsx
src/app/originals/4chan-discovered-chain-of-thought/: page.tsx
src/app/originals/ai-adoption-faster-than-internet/: page.tsx
src/app/originals/ai-api-pricing-war-2026/: page.tsx
src/app/originals/ai-money-gap-pwc/: page.tsx
src/app/podcasts/: layout.tsx  page.tsx
src/app/privacy/: page.tsx
src/app/research/: layout.tsx  page.tsx
src/app/status/: page.tsx
src/app/terms/: page.tsx
src/app/timeline/: page.tsx
src/app/today/: layout.tsx  page.tsx
src/app/what-are-ai-agents/: page.tsx
src/app/what-is-ai/: page.tsx
src/components/: AdPlaceholder.tsx  AgentActivity.tsx  AgentView.tsx  HomeFeed.tsx  LivePricingTables.tsx  NeuralNetworkBg.tsx  ThemeProvider.tsx  ViewModeProvider.tsx
src/components/gpu-pricing/: GpuPricingTable.tsx
src/components/home/: ActivityStream.tsx  BuildPulse.tsx  LiveTicker.tsx
src/components/layout/: Footer.tsx  Navbar.tsx  Sidebar.tsx
src/components/models/: ModelsDataSection.tsx
src/components/news/: NewsCard.tsx  NewsFeed.tsx
src/components/podcasts/: LatestPodcasts.tsx  PodcastPlayer.tsx
src/components/seo/: JsonLd.tsx
src/lib/: api-reference-directory.ts  benchmark-directory.ts  comparison-directory.ts  constants.ts  feed-chips.ts  model-directory.ts  originals-directory.ts  provider-directory.ts  rss.ts  terminalfeed.ts  text-highlight.tsx  types.ts
worker/: package-lock.json  wrangler.toml
worker/scripts/: generate-receipt-key.mjs
worker/src/: activity.ts  agents-enriched.test.ts  agents-enriched.ts  alerts.ts  catalog.ts  chaos.test.ts  chaos.ts  circuit-breaker.test.ts  circuit-breaker.ts  compare-models.test.ts  compare-models.ts  forecast.test.ts  forecast.ts  freshness.test.ts  freshness.ts  gpu-pricing.test.ts  gpu-pricing.ts  history-series.test.ts  history-series.ts  index.ts  mcp-registry.test.ts  mcp-registry.ts  payments.test.ts  payments.ts  podcasts.ts  probe.test.ts  probe.ts  provider-deepdive.test.ts  provider-deepdive.ts  receipts.test.ts  receipts.ts  rss.ts  snapshots.ts  status.ts  types.ts  watches.test.ts  watches.ts  whats-new.test.ts  whats-new.ts
(+34 files in other folders)
