[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorfeed"
version = "1.0.0"
description = "Python SDK for the TensorFeed.ai API - AI news, status, and model data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "TensorFeed.ai", email = "feedback@tensorfeed.ai" }]
keywords = ["tensorfeed", "ai", "news", "llm", "api", "status", "models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://tensorfeed.ai"
Documentation = "https://tensorfeed.ai/developers"
Repository = "https://github.com/evanatpizzarobot/tensorfeed"
