[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorfeed"
version = "1.1.0"
description = "Python SDK for the TensorFeed.ai API: AI news, status, model pricing, and agent-payable premium routing (USDC on Base)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "TensorFeed.ai", email = "feedback@tensorfeed.ai" }]
keywords = [
    "tensorfeed",
    "ai",
    "agents",
    "x402",
    "usdc",
    "base",
    "model-routing",
    "llm",
    "api",
    "stablecoin",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://tensorfeed.ai"
Documentation = "https://tensorfeed.ai/developers"
Repository = "https://github.com/RipperMercs/tensorfeed"
"Bug Tracker" = "https://github.com/RipperMercs/tensorfeed/issues"
Changelog = "https://tensorfeed.ai/changelog"
